[package]
name = "lightspark"
description = "Lightspark Rust SDK"
authors = ["Lightspark Group, Inc. <info@lightspark.com>"]
version = "0.3.0"
edition = "2021"
documentation = "https://app.lightspark.com/docs/sdk"
homepage = "https://www.lightspark.com/"
repository = "https://github.com/lightsparkdev/lightspark-rs"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" 
tokio = { version = "1.12.0", features = ["full"] } 
base64 = "0.21.0"
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
regex = "1.7.1"
chrono = "0.4.24"
openssl = "0.10.48"
aes-gcm = "0.10.1"
rand = "0.8.5"
block-modes = "0.9.1"
os-version = "0.2.0"
version_check = "0.9.4"
