[package]
name = "lightspark-remote-signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightspark = { path = "../lightspark" }
bip39 = { "version" = "2.0.0", features = ["rand"]}
bitcoin = "0.30.1"
hex = "0.4.3"
rand_core = { "version" = "0.6.4", features = ["getrandom"] }
serde_json = "1.0.104"
log = "0.4.20"
serde = "1.0.183"
