[package]
name = "lightspark-remote-signing"
description = "Lightspark Remote Signing SDK for Rust"
authors = ["Lightspark Group, Inc. <info@lightspark.com>"]
version = "0.1.0"
edition = "2021"
documentation = "https://app.lightspark.com/docs/"
homepage = "https://www.lightspark.com/"
repository = "https://github.com/lightsparkdev/lightspark-rs"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightspark = "0.6.1"
bip39 = { "version" = "2.0.0", features = ["rand"]}
bitcoin = "0.30.1"
hex = "0.4.3"
rand_core = { "version" = "0.6.4", features = ["getrandom"] }
serde_json = "1.0.104"
log = "0.4.20"
serde = "1.0.183"
