[package]
name = "lightspark"
description = "Lightspark Rust SDK"
authors = ["Lightspark Group, Inc. <info@lightspark.com>"]
version = "0.8.1"
edition = "2021"
documentation = "https://docs.lightspark.com/lightspark-sdk/getting-started?language=Rust"
homepage = "https://www.lightspark.com/"
repository = "https://github.com/lightsparkdev/lightspark-rs"
license = "Apache-2.0"
readme = "README.md"

[features]
default = ["base", "objects", "client"]
base = []
objects = ["base"]
webhooks = ["base", "objects"]
client = ["base", "objects", "dep:reqwest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
futures = "0.3" 
base64 = "0.21.0"
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
regex = "1.7.1"
chrono = "0.4.24"
aes-gcm = "0.10.1"
rand = "0.8.5"
block-modes = "0.9.1"
os-version = "0.2.0"
version_check = "0.9.4"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.7"
bitcoin = "0.30.1"
pbkdf2 = "0.12.2"
rsa = { version ="0.9.2", features = ["sha2"] }
cbc = "0.1.2"
async-trait = "0.1.73"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] } 
