[package]
name = "uma"
description = "UMA Protocol SDK for Rust"
authors = ["Lightspark Group, Inc. <info@lightspark.com>"]
version = "0.1.0"
edition = "2021"
documentation = "https://app.lightspark.com/docs/uma-sdk"
homepage = "https://www.lightspark.com/"
repository = "https://github.com/lightsparkdev/lightspark-rs"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3" 
tokio = { version = "1.12.0", features = ["full"] } 
base64 = "0.21.0"
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
sha2 = "0.10.7"
rand_core = "0.6.4"
ecies = "0.2.6"
bitcoin = "0.30.1"
url = "2.4.1"
chrono = "0.4.24"
hex = "0.4.3"
