[package]
name = "lightspark-remote-signing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightspark = { path = "../../lightspark" }
lightspark-remote-signing = { path = "../../lightspark-remote-signing" }
tokio = "1.32.0"
actix-web = "4.4.0"
futures-util = "0.3.28"
hex = "0.4.3"
