[package]
name = "uma-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
hex = "0.4.3"
lightspark = { path = "../../lightspark" }
serde_json = "1.0.107"
uma = "0.1.1"
