[package]
name = "uma-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
hex = "0.4.3"
lightspark = { path = "../../lightspark" }
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls"] }
serde = "1.0.190"
serde_json = "1.0.107"
tokio = "1.33.0"
uma = "0.5.2"
url = "2.4.1"
uuid = { version = "1.5.0", features = ["v4"] }
